Change more styles on the issue component on smaller displays

--- a/client/src/styles/_dashboard.scss
+++ b/client/src/styles/_dashboard.scss
@@ -4,7 +4,8 @@
   &__wrapper {
     width: 100%;
     min-height: 100vh;
-    height: 100%;
+    height: 100vh;
+    max-height: 100vh;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
