--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -3488,6 +3488,11 @@ header::after {
     -ms-grid-columns: (6fr)[2];
         grid-template-columns: repeat(2, 6fr);
   }
+  .issue__header {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
   .issue__name {
     font-size: 20px;
     color: #0f003a;
@@ -3508,13 +3513,6 @@ header::after {
   .issue__action-buttons-container div a svg,
   .issue__action-buttons-container div svg {
     font-size: 20px;
-  }
-  .issue__statuc-container div {
-    font-size: 10px;
-    padding: 5px 10px;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
   }
 }
 
@@ -3907,7 +3905,8 @@ header::after {
 .dashboard__wrapper {
   width: 100%;
   min-height: 100vh;
-  height: 100%;
+  height: 100vh;
+  max-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
